- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
P2: Important
 - 
    6.2.7, 6.2.8, 6.5.1
 
- 
        481fd071c (dev), 19241ec09 (6.6), 7b29826e9 (tqtc/lts-6.5)
 
Calling QColorAxis::setVisible method does not hide the color axis entirely. The ticks and title (if set) becomes invisible but axis is still visible.
I attached a sample code to reproduce the bug.
(Try resizing the chart window to see the bug more clearly.)