Fix setting QColorAxis visibility to false

Call m_colorScale->setVisible(false) when setting the axis
visibility to false.

Fixes: QTBUG-114814
Pick-to: 6.6 6.5
Change-Id: I7564deda68ffba40c33678fd8fa7f6d4efd07588
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>